--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,5 +12,7 @@ target_include_directories(test_decompose PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(test_decompose PUBLIC "/Users/xin/github/SZ_refactory/include" "/Users/xin/utils/sz_master/include")
 target_link_libraries(test_decompose ${ZSTD_LIB} ${SZ})
 
-# add_executable (test_data_reorder test_data_reorder.cpp)
-# target_include_directories(test_data_reorder PUBLIC ${PROJECT_SOURCE_DIR}/include)
+add_executable (test_data_reorder test_data_reorder.cpp)
+target_include_directories(test_data_reorder PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(test_data_reorder PUBLIC "/Users/xin/github/SZ_refactory/include" "/Users/xin/utils/sz_master/include")
+target_link_libraries(test_data_reorder ${ZSTD_LIB} ${SZ})
