--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable (test_decompose test_decompose.cpp)
 target_link_libraries(test_decompose ${PROJECT_NAME})
 
+add_executable (test_convergence test_convergence.cpp)
+target_link_libraries(test_convergence ${PROJECT_NAME})
+
 #add_executable (test_operator_norm test_operator_norm.cpp)
 #target_link_libraries(test_operator_norm ${PROJECT_NAME})
 
